[package]
name = "day-24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
indoc = { workspace = true }
rstest = { workspace = true }
glam = { workspace = true }
linked-hash-map = { workspace = true }

