[package]
name = "day-25"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
indoc = { workspace = true }
rstest = { workspace = true }
glam = { workspace = true }
linked-hash-map = { workspace = true }

petgraph = "0.6"
rustworkx-core = "0.13"

